Fix back/forward button size and spacing
Remove the extra 1px on Adwaita, add spacing on elementary.

--- a/src/resources/themes/elementary.scss
+++ b/src/resources/themes/elementary.scss
@@ -123,3 +123,8 @@ dzlsuggestionpopover > revealer > box {
 .bookmark-tag-widget-selected {
   background-color: themecolor(colorAccent);
 }
+
+// Back and forward are not linked on elementary
+.navigation-box button:not(:last-child) {
+  margin-right: 6px;
+}
